[package]
name = "vid-from-pdf"
version = "1.0.0-alpha"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"
build = "build.rs"

[dependencies]
auditable = "0.1"
index-ext = "0.0.2"
rand = "0.7"
serde = "1"
serde_json = "1"
tempfile = "3"
versions = "2"
which = "4"

[dependencies.tokio]
version = "0.3.3"
features = ["rt", "stream"]

[dependencies.crossterm]
version = "0.18"
features = ["event-stream"]
[dependencies.tui]
version = "0.13"
default-features = false
features = ["crossterm"]

[build-dependencies]
auditable-build = "0.1"
