[package]
name = "vid-from-pdf"
version = "1.0.0-alpha"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"
build = "build.rs"

[dependencies]
auditable = "0.1"
base64 = "0.13"
index-ext = "0.0.2"
rand = "0.7"
serde = "1"
serde_json = "1"
tempfile = "3"
versions = "2"
which = "4"

[dependencies.tokio]
version = "0.3.3"
features = ["rt", "stream"]

[dependencies.crossterm]
version = "0.18"
features = ["event-stream"]
[dependencies.tui]
version = "0.13"
default-features = false
features = ["crossterm"]

[dependencies.rust-embed]
version = "5.6"
features = ["compression"]
[dependencies.tide]
version = "0.15"
default-features = false
features = ["h1-server", "logger", "sessions"]
[dependencies.image]
version = "0.23.12"
default-features = false
features = ["png", "pnm"]
[dependencies.png]
git = "https://github.com/HeroicKatora/image-png/"
# This is a Github-created automatic merge head for PR 255.
# Don't be alarmed if you can not find it in the history.
# Look at its description for more information.
rev = "72854c54307349b1c75bfdcdb2c4baa27eb01617"

[dependencies.pdf-extract]
version = "0.6"
optional = true
[dependencies.lopdf]
version = "0.24"
optional = true

[features]
# FIXME: don't enable by default.
# default = ["no-pdftoppm"]
# Replace pdftoppm with Rust crates.
no-pdftoppm = ["pdf-extract", "lopdf"]

[build-dependencies]
auditable-build = "0.1"

[profile.dev.package."*"]
opt-level = 3
debug = false
