[package]
name = "vid-from-pdf"
version = "1.0.0-beta.1"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"
build = "build.rs"

[dependencies]
auditable = "0.1"
base64 = "0.13"
index-ext = "0.0.2"
libloading = "0.6"
rand = "0.7"
serde = "1"
serde_json = "1"
tempfile = "3"
versions = "2"
which = "4"

[dependencies.tokio]
version = "0.3.3"
features = ["rt", "stream"]
[dependencies.ctrlc]
version = "3.1"

[dependencies.crossterm]
version = "0.18"
features = ["event-stream"]
[dependencies.tui]
version = "0.13"
default-features = false
features = ["crossterm"]

[dependencies.rust-embed]
version = "5.6"
features = ["compression"]
[dependencies.tide]
version = "0.15"
default-features = false
features = ["h1-server", "logger", "sessions"]
[dependencies.image]
version = "0.23.12"
default-features = false
features = ["png", "pnm"]

[dependencies.mupdf]
version = "0.0.6"
[dependencies.svg-to-image]
path = "svg-to-image"

[build-dependencies]
auditable-build = "0.1"

[profile.dev.package."*"]
opt-level = 3
debug = false

[workspace]
members = [
  "svg-to-image"
]
