[package]
name = "mkv-slide-show"
version = "0.0.0"
edition = "2018"
description = "Convert images and durations into a slide show video"

[dependencies.bytemuck]
version = "1.7"
[dependencies.ebml-iterable]
version = "0.3"
[dependencies.image]
version = "0.23.14"
default-features = false
features = ["png", "tiff", "pnm"]
[dependencies.serde]
version = "1"
features = ["derive"]
[dependencies.serde_json]
version = "1"
[dependencies.wav]
version = "1"
[dependencies.webm-iterable]
version = "0.3"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3.2"
