[package]
name = "pdf-to-image"
version = "0.0.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"

[dependencies]
image = "0.23.12"
usvg = "0.13"
subprocess = "0.2.6"

# For pathfinder based GPU rasterization.
old_usvg = { package = "usvg", version = "0.9", optional = true }
gl = { version = "0.5", optional = true }
glfw = { version = "0.4", optional = true }
pathfinder_gl = { version =  "0.5", optional = true }
pathfinder_geometry = { version = "0.5", optional = true }
pathfinder_gpu = { version = "0.5", optional = true }
pathfinder_svg = { version = "0.5", optional = true }
pathfinder_renderer = { version = "0.5", optional = true }
pathfinder_resources = { version = "0.5", optional = true }

# For cpu rasterization.
resvg = "0.13"
tiny-skia = "0.3"

[features]
pathfinder = [
  "old_usvg",
  "gl",
  "glfw",
  "pathfinder_gl",
  "pathfinder_geometry",
  "pathfinder_gpu",
  "pathfinder_svg",
  "pathfinder_renderer",
  "pathfinder_resources",
]
