[package]
name = "svg-to-image"
version = "0.0.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"

[dependencies]
image = { version = "0.23.12", default-features = false }
subprocess = "0.2.6"
which = "4"

[features]

[dev-dependencies.image]
version = "0.23.12"
default-features = false
features = ["pnm"]
