[package]
name = "vfp-core"
version = "0.0.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"
build = "build.rs"

[dependencies]
auditable = "0.1"
base64 = "0.13"
index-ext = "0.0.2"
libloading = "0.6"
rand = "0.7"
serde = "1"
serde_json = "1"
tempfile = "3"
versions = "3"
which = "4"

[dependencies.tokio]
version = "1.12"
features = ["rt"]
[dependencies.tokio-stream]
version = "0.1.7"
[dependencies.ctrlc]
version = "3.1"

[dependencies.crossterm]
version = "0.18"
features = ["event-stream"]
[dependencies.tui]
version = "0.13"
default-features = false
features = ["crossterm"]

[dependencies.image]
version = "0.23.12"
default-features = false
features = ["png", "pnm"]

[dependencies.svg-to-image]
path = "../svg-to-image"

[build-dependencies]
auditable-build = "0.1"
escargot = "0.5.2"
