[package]
name = "vid-from-pdf"
version = "0.0.0"
authors = ["Andreas Molzer <andreas.molzer@gmx.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"
build = "build.rs"

[dependencies.rust-embed]
version = "5.6"
features = ["compression"]
[dependencies.tide]
version = "0.15"
default-features = false
features = ["h1-server", "logger", "sessions"]
[dependencies.image]
version = "0.23.12"
default-features = false
features = ["png", "pnm"]

[build-dependencies]
auditable-build = "0.1"
